kubernetes/appdeloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  uploadhere-app
  namespace: default
  labels:
    app:  uploadhere-app
spec:
  selector:
    matchLabels:
      app: uploadhere-app
  replicas: 2
  template:
    metadata:
      labels:
        app:  uploadhere-app
    spec:
      containers:
      - name:  uploadhere
        image:  amritpoudel/uploadhere:v1
        ports:
        - containerPort:  3000
          name:  uploadhere-port
