kubernetes/appService.yml
apiVersion : v1
kind: Service 
metadata:
 name : uploadhere-app-service
spec:
  selector:
    app : uploadhere-app
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 3000
  type: ClusterIP
