kubernetes/mogoservice.yml
apiVersion : v1
kind: Service 
metadata:
  name: mongo-service
spec:
  selector: 
     app : mongo
  ports:
    - protocol : TCP
      port: 27017
      targetPort : 27017
  clusterIP : None
